<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/addToDBBt"
        android:layout_width="208dp"
        android:layout_height="0dp"
        android:layout_marginTop="184dp"
        android:layout_marginBottom="44dp"
        android:text="@string/add_to_db"
        app:layout_constraintBottom_toTopOf="@+id/searchMoviesBt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchMoviesBt"
        android:layout_width="208dp"
        android:layout_height="0dp"
        android:layout_marginBottom="44dp"
        android:text="@string/search_for_movies"
        app:layout_constraintBottom_toTopOf="@+id/searchActorsBt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addToDBBt" />

    <Button
        android:id="@+id/searchActorsBt"
        android:layout_width="208dp"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:text="@string/search_for_actors"
        app:layout_constraintBottom_toTopOf="@+id/searchByStringbt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchMoviesBt" />

    <Button
        android:id="@+id/searchByStringbt"
        android:layout_width="208dp"
        android:layout_height="0dp"
        android:layout_marginBottom="155dp"
        android:text="@string/search_movie_by_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchActorsBt" />
</androidx.constraintlayout.widget.ConstraintLayout>