<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/saveMovieBt"
        android:layout_width="211dp"
        android:layout_height="85dp"
        android:layout_marginBottom="28dp"
        android:text="@string/save_movie_to_database"
        app:layout_constraintBottom_toTopOf="@+id/retrieveMovieBt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/retrieveMovieBt"
        android:layout_width="209dp"
        android:layout_height="70dp"
        android:layout_marginBottom="388dp"
        android:text="@string/retrieve_movie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/viewRetrievedMovie"
        android:layout_width="361dp"
        android:layout_height="0dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="60dp"
        android:text="@string/viewRetrievedMovie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterMoviePT" />

    <EditText
        android:id="@+id/enterMoviePT"
        android:layout_width="372dp"
        android:layout_height="76dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="286dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enterMoviePT"
        app:layout_constraintBottom_toTopOf="@+id/viewRetrievedMovie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>